--- a/css/style.css
+++ b/css/style.css
@@ -425,11 +425,11 @@ fieldset {
 .community .inner {
   /* pagination */ }
   .community .inner h1 {
-    font: bold 50px/1 "Spartan";
-    color: #333;
+    font: bold 50px/1 'Spartan';
+    color: #444;
     letter-spacing: 2px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     position: relative; }
   .community .inner::after {
     content: "";
@@ -699,8 +699,13 @@ fieldset {
       width: 100px;
       height: 30px;
       font: normal 16px/30px "arial"; } }
+/*
+"Spartan"
+'STIX Two Text'
+'Noto Sans KR'
+*/
 .join {
-  padding: 0 0 150px; }
+  width: 100%; }
   .join .sub_visual {
     background-image: url(../img/j4.jpg);
     background-size: cover;
@@ -708,130 +713,154 @@ fieldset {
     background-position: center center;
     /* background-attachment: fixed; */
     opacity: 0.8; }
-  .join .inner h1 {
-    font: normal 50px/1 "STIX Two Text";
-    text-align: center;
-    color: #333;
-    letter-spacing: 1.5px;
-    text-align: center;
-    margin-bottom: 20px;
-    position: relative; }
-  .join .inner fieldset {
-    position: relative; }
-  .join .inner h2 {
-    font: normal 20px/1 "STIX Two Text";
-    color: #444;
-    margin-bottom: 20px;
-    margin-top: 50px; }
-    .join .inner h2:nth-of-type(2) {
-      border-bottom: 2px solid #333;
-      margin-bottom: 30px;
-      padding-bottom: 30px; }
-  .join .inner textarea {
-    resize: none;
+  .join .inner {
     width: 100%;
-    height: 120px;
-    padding: 20px;
-    font: 14px/1.6 "STIX Two Text";
-    color: #888;
-    border: 1px solid #aaa;
-    margin-bottom: 20px; }
-    .join .inner textarea:last-child {
-      border: 1px solid #fff;
-      background: #efefef;
-      padding: 15px; }
-  .join .inner h3 {
-    display: inline-block;
-    font: normal 10px/1 "arial";
-    color: #eb5079;
-    position: absolute;
-    right: 20px;
-    top: 21%; }
-    .join .inner h3 > .cir {
-      width: 5px;
-      height: 5px;
-      display: inline-block;
-      margin-right: 8px;
-      background: #eb5079;
-      border-radius: 50px; }
-  .join .inner .agree {
-    text-align: center; }
-    .join .inner .agree span {
-      font: normal 13px/1 "arial";
+    padding: 0 150px;
+    position: relative; }
+    .join .inner h1 {
+      font: bold 50px/1 "Spartan";
+      text-align: center;
       color: #333;
-      margin-left: 5px; }
-  .join .inner table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px; }
-    .join .inner table tr {
-      position: relative; }
-      .join .inner table tr:last-child {
-        border-bottom: none;
-        border-right: none;
-        text-align: center; }
-      .join .inner table tr:nth-of-type(6) .cir {
-        display: none; }
-      .join .inner table tr:nth-of-type(7) .cir {
-        display: none; }
-      .join .inner table tr th {
-        width: 15%;
-        padding: 5px;
-        /* border-right: 1px dashed #bbb; */
-        text-align: left; }
-        .join .inner table tr th span {
-          font: 600 11px/1 "Spartan";
-          color: #222; }
-        .join .inner table tr th .cir {
-          width: 5px;
-          height: 5px;
-          display: inline-block;
-          margin-left: 8px;
-          background: #eb5079;
-          border-radius: 50px; }
-        .join .inner table tr th:last-child {
-          border-right: none;
-          border-bottom: none;
-          text-align: center;
-          background: #fff;
-          font-size: 0; }
-      .join .inner table tr td {
-        width: 80%;
-        padding: 20px 0px; }
-        .join .inner table tr td > #comment {
-          background: #efefef;
-          padding: 15px 10px;
-          margin: 0px 0px 15px; }
-      .join .inner table tr input[type="text"],
-      .join .inner table tr input[type="password"] {
-        width: 100%;
-        height: 50px;
-        border: 1px solid #fff;
-        background: #efefef;
-        padding: 15px 10px;
-        margin-bottom: 15px; }
-      .join .inner table tr input[type="checkbox"],
-      .join .inner table tr input[type="radio"] {
-        margin-left: 5px; }
-      .join .inner table tr input[type="tel"] {
-        width: 100%;
-        height: 50px;
-        border: 1px solid #fff;
-        background: #efefef;
-        padding: 15px 10px;
-        margin-bottom: 15px; }
-      .join .inner table tr input[type="submit"] {
-        width: 87%;
-        height: 70px;
-        margin: 0 auto;
-        margin-left: 13.5%;
+      letter-spacing: 1.5px;
+      margin-bottom: 40px; }
+    .join .inner .gnb {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 50px; }
+      .join .inner .gnb li {
         float: left;
-        font: 25px/70px "STIX Two Text";
+        margin-right: 20px; }
+        .join .inner .gnb li:last-child {
+          margin-right: 0px; }
+        .join .inner .gnb li a {
+          font: bold 20px/1 "Noto Sans KR";
+          color: #222; }
+    .join .inner .box_content {
+      width: 100%;
+      height: 100px;
+      border: 3px solid #222;
+      margin-bottom: 40px; }
+      .join .inner .box_content .txt {
+        width: 100%;
+        height: 100%;
+        padding-right: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center; }
+        .join .inner .box_content .txt span {
+          margin-right: 20px;
+          font: bold 17px/1 "Noto Sans KR"; }
+          .join .inner .box_content .txt span:nth-of-type(2n+0) {
+            border-left: 1px solid #222;
+            padding-left: 20px; }
+    .join .inner fieldset {
+      position: relative; }
+    .join .inner textarea {
+      resize: none;
+      width: 100%;
+      height: 120px;
+      padding: 20px;
+      font: 14px/1.6 'Noto Sans KR';
+      color: #888;
+      border: 1px solid #aaa;
+      margin-bottom: 20px; }
+      .join .inner textarea:last-child {
         border: 1px solid #fff;
-        transform: translateX(24px);
-        box-sizing: border-box;
-        color: #fff;
-        background: linear-gradient(60deg, #d9a7c7, #fffcdc); }
+        background: #efefef;
+        padding: 15px; }
+    .join .inner h2 {
+      display: inline-block;
+      font: normal 16px/1 'Noto Sans KR';
+      color: #eb5079;
+      position: absolute;
+      right: 20px;
+      top: -2%; }
+      .join .inner h2 > .cir {
+        width: 5px;
+        height: 5px;
+        display: inline-block;
+        margin-right: 8px;
+        background: #eb5079;
+        border-radius: 50px; }
+    .join .inner .table1 {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px; }
+      .join .inner .table1 tr {
+        position: relative; }
+        .join .inner .table1 tr:last-child {
+          border-bottom: none;
+          border-right: none;
+          text-align: center; }
+        .join .inner .table1 tr:nth-of-type(6) .cir {
+          display: none; }
+        .join .inner .table1 tr:nth-of-type(7) .cir {
+          display: none; }
+        .join .inner .table1 tr th {
+          width: 15%;
+          padding: 5px;
+          /* border-right: 1px dashed #bbb; */
+          text-align: left; }
+          .join .inner .table1 tr th span {
+            font: 600 20px/1 'Noto Sans KR';
+            color: #222; }
+          .join .inner .table1 tr th .cir {
+            width: 5px;
+            height: 5px;
+            display: inline-block;
+            margin-left: 8px;
+            background: #eb5079;
+            border-radius: 50px; }
+          .join .inner .table1 tr th:last-child {
+            border-right: none;
+            border-bottom: none;
+            text-align: center;
+            background: #fff;
+            font-size: 0; }
+        .join .inner .table1 tr td {
+          width: 80%;
+          padding: 20px 0px; }
+          .join .inner .table1 tr td > #comment {
+            background: #efefef;
+            padding: 15px 10px;
+            margin: 0px 0px 15px; }
+        .join .inner .table1 tr input[type="text"],
+        .join .inner .table1 tr input[type="password"] {
+          width: 40%;
+          height: 55px;
+          border: 1px solid #333;
+          background: #fff;
+          padding: 15px 10px;
+          margin-bottom: 15px; }
+        .join .inner .table1 tr input[type="checkbox"],
+        .join .inner .table1 tr input[type="radio"] {
+          margin-left: 5px; }
+        .join .inner .table1 tr input[type="tel"] {
+          width: 40%;
+          height: 55px;
+          border: 1px solid #333;
+          background: #fff;
+          padding: 15px 10px;
+          margin-bottom: 15px; }
+    .join .inner h3 {
+      font: bold 25px/1 'Noto Sans KR';
+      color: #222;
+      padding-bottom: 30px;
+      margin: 30px 0 30px;
+      border-bottom: 2px solid #222; }
+    .join .inner .table2 input[type="submit"], .join .inner .table2 input[type="reset"] {
+      width: 50%;
+      height: 70px;
+      margin: 0 auto;
+      margin-left: 20px;
+      float: left;
+      font: 300 25px/70px 'Noto Sans KR';
+      transform: translateX(24px);
+      box-sizing: border-box;
+      color: #fff;
+      background: #222; }
 
 @media screen and (max-width: 1179px) {
   .join {
@@ -996,9 +1025,17 @@ fieldset {
       width: 100%;
       position: absolute;
       top: 4%;
-      left: 50%; }
+      left: 28%; }
       .department .inner .team_name li {
-        float: left; }
+        float: left;
+        padding-right: 20px;
+        margin-right: 20px;
+        border-right: 1px solid #555; }
+        .department .inner .team_name li a {
+          font: bold 18px/1 'Noto Sans KR';
+          color: #222; }
+        .department .inner .team_name li:last-child {
+          border-right: none; }
     .department .inner .wrap {
       width: 100%; }
       .department .inner .wrap::before {
@@ -1099,7 +1136,7 @@ fieldset {
             text-align: center;
             line-height: 40px;
             color: #858080; }
-          .department .inner .wrap .team article:nth-child(4n+0) {
+          .department .inner .wrap .team article:nth-of-type(4n+0) {
             margin-right: 0; }
 
 .gallery .sub_visual {
