--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -17,11 +17,10 @@
 	}
 	.inner {
 		h1 {
-			font: bold 50px/1 "Spartan";
-			color: #333;
+			font: bold 50px/1 'Spartan'; color: #444;
 			letter-spacing: 2px;
 			text-align: center;
-			margin-bottom: 20px;
+			margin-bottom: 30px;
 			position: relative;
 		}
 		&::after {
