--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -1,7 +1,13 @@
 @charset "utf-8";
 
+/*
+"Spartan"
+'STIX Two Text'
+'Noto Sans KR'
+*/
+
 .join {
-	padding: 0 0 150px;
+	width: 100%;
 
 	.sub_visual {
 		background-image: url(../img/j4.jpg);
@@ -12,36 +18,76 @@
 		opacity: 0.8;
 	}
 	.inner {
+		width: 100%;
+		padding: 0 150px;
+		position: relative;
+
 		h1 {
-			font: normal 50px/1 "STIX Two Text";
+			font: bold 50px/1 "Spartan";
 			text-align: center;
 			color: #333;
 			letter-spacing: 1.5px;
-			text-align: center;
-			margin-bottom: 20px;
-			position: relative;
+			margin-bottom: 40px;
 		}
+
+		.gnb {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			margin-bottom: 50px;
+
+			li {
+				float: left;
+				margin-right: 20px;
+
+				&:last-child {
+					margin-right: 0px;
+				}
+				a {
+					font: bold 20px/1 "Noto Sans KR";
+					color: #222;
+				}
+			}
+		}
+		.box_content {
+			width: 100%;
+			height: 100px;
+			border: 3px solid #222;
+			margin-bottom: 40px;
+
+			.txt {
+				width: 100%;
+				height: 100%;
+				padding-right: 20px;
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				align-items: center;
+			
+				
+
+				span {
+					margin-right: 20px;
+					font: bold 17px/1 "Noto Sans KR";
+
+					&:nth-of-type(2n+0) {
+						border-left: 1px solid #222;
+						padding-left: 20px;
+					}
+				}
+			}
+		}
+
 		fieldset {
 			position: relative;
 		}
-		h2 {
-			font: normal 20px/1 "STIX Two Text";
-			color: #444;
-			margin-bottom: 20px;
-			margin-top: 50px;
-
-			&:nth-of-type(2) {
-				border-bottom: 2px solid #333;
-				margin-bottom: 30px;
-				padding-bottom: 30px;
-			}
-		}
+	
 		textarea {
 			resize: none;
 			width: 100%;
 			height: 120px;
 			padding: 20px;
-			font: 14px/1.6 "STIX Two Text";
+			font: 14px/1.6 'Noto Sans KR';
 			color: #888;
 			border: 1px solid #aaa;
 			margin-bottom: 20px;
@@ -52,13 +98,13 @@
 				padding: 15px;
 			}
 		}
-		h3 {
+		h2 {
 			display: inline-block;
-			font: normal 10px/1 "arial";
+			font: normal 16px/1 'Noto Sans KR';
 			color: #eb5079;
 			position: absolute;
 			right: 20px;
-			top: 21%;
+			top: -2%;
 
 			> .cir {
 				width: 5px;
@@ -69,16 +115,8 @@
 				border-radius: 50px;
 			}
 		}
-		.agree {
-			text-align: center;
 
-			span {
-				font: normal 13px/1 "arial";
-				color: #333;
-				margin-left: 5px;
-			}
-		}
-		table {
+		.table1 {
 			width: 100%;
 			border-collapse: collapse;
 			margin-bottom: 20px;
@@ -103,7 +141,7 @@
 					text-align: left;
 
 					span {
-						font: 600 11px/1 "Spartan";
+						font: 600 20px/1 'Noto Sans KR';
 						color: #222;
 					}
 					.cir {
@@ -134,10 +172,10 @@
 				}
 				input[type="text"],
 				input[type="password"] {
-					width: 100%;
-					height: 50px;
-					border: 1px solid #fff;
-					background: #efefef;
+					width: 40%;
+					height: 55px;
+					border: 1px solid #333;
+					background: #fff;
 					padding: 15px 10px;
 					margin-bottom: 15px;
 				}
@@ -146,29 +184,43 @@
 					margin-left: 5px;
 				}
 				input[type="tel"] {
-					width: 100%;
-					height: 50px;
-					border: 1px solid #fff;
-					background: #efefef;
+					width: 40%;
+					height: 55px;
+					border: 1px solid #333;
+					background: #fff;
 					padding: 15px 10px;
 					margin-bottom: 15px;
 				}
 
-				input[type="submit"] {
-					width: 87%;
-					height: 70px;
-					margin: 0 auto;
-					margin-left: 13.5%;
-					float: left;
-					font: 25px/70px "STIX Two Text";
-					border: 1px solid #fff;
-					transform: translateX(24px);
-					box-sizing: border-box;
-					color: #fff;
-					background: linear-gradient(60deg, #d9a7c7, #fffcdc);
-				}
+			
 			}
 		}
+		h3 {
+			font: bold 25px/1 'Noto Sans KR';
+			color: #222;
+			padding-bottom: 30px;
+			margin:30px 0 30px;
+			border-bottom: 2px solid #222;
+		}
+		.table2 {
+
+			input[type="submit"], input[type="reset"] {
+				width: 50%;
+				height: 70px;
+				margin: 0 auto;
+				margin-left: 20px;
+				float: left;
+				font: 300 25px/70px 'Noto Sans KR';
+				// border: 1px solid #fff;
+				transform: translateX(24px);
+				box-sizing: border-box;
+				color: #fff;
+				background: #222;
+				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
+			}
+		}
+
+
 	}
 }
 // tablet -------------------------------------------------------------------
