--- a/css/style.css
+++ b/css/style.css
@@ -714,7 +714,7 @@ fieldset {
     /* background-attachment: fixed; */
     opacity: 0.8; }
   .join .inner {
-    width: 100%;
+    width: 80%;
     padding: 0 150px;
     position: relative; }
     .join .inner h1 {
@@ -850,17 +850,21 @@ fieldset {
       padding-bottom: 30px;
       margin: 30px 0 30px;
       border-bottom: 2px solid #222; }
-    .join .inner .table2 input[type="submit"], .join .inner .table2 input[type="reset"] {
-      width: 50%;
-      height: 70px;
-      margin: 0 auto;
-      margin-left: 20px;
-      float: left;
-      font: 300 25px/70px 'Noto Sans KR';
-      transform: translateX(24px);
-      box-sizing: border-box;
-      color: #fff;
-      background: #222; }
+    .join .inner .table2 {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px; }
+      .join .inner .table2 input[type="submit"], .join .inner .table2 input[type="reset"] {
+        width: 30%;
+        height: 70px;
+        margin: 0 auto;
+        margin-left: 20px;
+        float: left;
+        font: 300 25px/70px 'Noto Sans KR';
+        transform: translateX(24px);
+        box-sizing: border-box;
+        color: #fff;
+        background: #222; }
 
 @media screen and (max-width: 1179px) {
   .join {
@@ -1583,7 +1587,8 @@ fieldset {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        transition: 0.5s; }
         #news .inner .wrap article .icon {
           display: inline-block; }
           #news .inner .wrap article .icon i {
@@ -1650,8 +1655,7 @@ fieldset {
         #product .inner .wrap .product_slider .product_list {
           width: 3600px;
           height: 100%;
-          overflow: hidden;
-          transition: 1s; }
+          overflow: hidden; }
           #product .inner .wrap .product_slider .product_list li {
             width: 360px;
             height: 500px;
@@ -1822,9 +1826,10 @@ fieldset {
         margin-right: 20px;
         float: left;
         position: relative; }
-        #brand .inner .wrap article:nth-of-type(2) img {
+        #brand .inner .wrap article:nth-of-type(2) .pic {
           width: 100%;
           height: 150px;
+          background: #fbc7d4;
           object-fit: cover; }
         #brand .inner .wrap article:nth-of-type(2) .txt {
           width: 100%;
@@ -1859,9 +1864,10 @@ fieldset {
         background: #fff;
         float: left;
         position: relative; }
-        #brand .inner .wrap article:nth-of-type(3) img {
+        #brand .inner .wrap article:nth-of-type(3) .pic {
           width: 100%;
           height: 150px;
+          background: #fbc7d4;
           object-fit: cover; }
         #brand .inner .wrap article:nth-of-type(3) .txt {
           width: 100%;
