--- a/scss/style.scss
+++ b/scss/style.scss
@@ -462,6 +462,7 @@ $mobile: 539px;
 				flex-direction: column;
 				justify-content: center;
 				align-items: center;
+				transition: 0.5s;
 
 				.icon {
 					display: inline-block;
@@ -555,7 +556,7 @@ $mobile: 539px;
 					width: 3600px;
 					height: 100%;
 					overflow: hidden;
-					transition: 1s;
+					
 
 					li {
 						width: 360px;
@@ -809,9 +810,10 @@ $mobile: 539px;
 				float: left;
 				position: relative;
 
-				img {
+				.pic {
 					width: 100%;
 					height: 150px;
+					background: #fbc7d4;
 					object-fit: cover;
 				}
 				.txt {
@@ -855,9 +857,10 @@ $mobile: 539px;
 				float: left;
 				position: relative;
 
-				img {
+				.pic {
 					width: 100%;
 					height: 150px;
+					background: #fbc7d4;
 					object-fit: cover;
 				}
 
