--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -18,7 +18,7 @@
 		opacity: 0.8;
 	}
 	.inner {
-		width: 80%;
+		width: 1180px;
 		padding: 0 150px;
 		position: relative;
 
@@ -63,14 +63,12 @@
 				flex-direction: row;
 				justify-content: center;
 				align-items: center;
-			
-				
 
 				span {
 					margin-right: 20px;
 					font: bold 17px/1 "Noto Sans KR";
 
-					&:nth-of-type(2n+0) {
+					&:nth-of-type(2n + 0) {
 						border-left: 1px solid #222;
 						padding-left: 20px;
 					}
@@ -81,13 +79,13 @@
 		fieldset {
 			position: relative;
 		}
-	
+
 		textarea {
 			resize: none;
 			width: 100%;
 			height: 120px;
 			padding: 20px;
-			font: 14px/1.6 'Noto Sans KR';
+			font: 14px/1.6 "Noto Sans KR";
 			color: #888;
 			border: 1px solid #aaa;
 			margin-bottom: 20px;
@@ -100,7 +98,7 @@
 		}
 		h2 {
 			display: inline-block;
-			font: normal 16px/1 'Noto Sans KR';
+			font: normal 16px/1 "Noto Sans KR";
 			color: #eb5079;
 			position: absolute;
 			right: 20px;
@@ -115,7 +113,33 @@
 				border-radius: 50px;
 			}
 		}
+		th {
+			width: 20%;
+			padding: 5px;
+			/* border-right: 1px dashed #bbb; */
+			text-align: left;
+			margin-right: 20px;
 
+			span {
+				font: 600 20px/1 "Noto Sans KR";
+				color: #222;
+			}
+			.cir {
+				width: 5px;
+				height: 5px;
+				display: inline-block;
+				margin-left: 8px;
+				background: #eb5079;
+				border-radius: 50px;
+			}
+
+		
+		}
+		td {
+			width: 80%;
+			padding: 20px 0px;
+	
+		}
 		.table1 {
 			width: 100%;
 			border-collapse: collapse;
@@ -123,53 +147,10 @@
 			tr {
 				position: relative;
 
-				&:last-child {
-					border-bottom: none;
-					border-right: none;
-					text-align: center;
-				}
-				&:nth-of-type(6) .cir {
-					display: none;
-				}
 				&:nth-of-type(7) .cir {
 					display: none;
 				}
-				th {
-					width: 15%;
-					padding: 5px;
-					/* border-right: 1px dashed #bbb; */
-					text-align: left;
 
-					span {
-						font: 600 20px/1 'Noto Sans KR';
-						color: #222;
-					}
-					.cir {
-						width: 5px;
-						height: 5px;
-						display: inline-block;
-						margin-left: 8px;
-						background: #eb5079;
-						border-radius: 50px;
-					}
-
-					&:last-child {
-						border-right: none;
-						border-bottom: none;
-						text-align: center;
-						background: #fff;
-						font-size: 0;
-					}
-				}
-				td {
-					width: 80%;
-					padding: 20px 0px;
-					> #comment {
-						background: #efefef;
-						padding: 15px 10px;
-						margin: 0px 0px 15px;
-					}
-				}
 				input[type="text"],
 				input[type="password"] {
 					width: 40%;
@@ -178,10 +159,30 @@
 					background: #fff;
 					padding: 15px 10px;
 					margin-bottom: 15px;
+
+					&:last-child {
+						width: 60%;
+					}
 				}
+				button {
+					width: 100px;
+					height: 55px;
+					margin-left: 10px;
+					background: #222;
+					border: 1px solid #fff;
+					border: none;
+					color: #fff;
+					font: bold 13px/55px "Noto Sans KR";
+
+				}
+
 				input[type="checkbox"],
 				input[type="radio"] {
-					margin-left: 5px;
+					margin-left: 10px;
+					width: 15px;
+					height: 15px;
+					
+
 				}
 				input[type="tel"] {
 					width: 40%;
@@ -191,30 +192,38 @@
 					padding: 15px 10px;
 					margin-bottom: 15px;
 				}
-
-			
 			}
 		}
 		h3 {
-			font: bold 25px/1 'Noto Sans KR';
+			font: bold 25px/1 "Noto Sans KR";
 			color: #222;
 			padding-bottom: 30px;
-			margin:30px 0 30px;
+			margin: 70px 0 50px;
 			border-bottom: 2px solid #222;
 		}
 		.table2 {
-
 			width: 100%;
 			border-collapse: collapse;
 			margin-bottom: 20px;
 
-			input[type="submit"], input[type="reset"] {
+			input[type="text"],
+			input[type="password"] {
+				width: 40%;
+				height: 55px;
+				border: 1px solid #333;
+				background: #fff;
+				padding: 15px 10px;
+				margin-bottom: 15px;
+			}
+
+			input[type="submit"],
+			input[type="reset"] {
 				width: 30%;
 				height: 70px;
 				margin: 0 auto;
 				margin-left: 20px;
 				float: left;
-				font: 300 25px/70px 'Noto Sans KR';
+				font: 300 25px/70px "Noto Sans KR";
 				// border: 1px solid #fff;
 				transform: translateX(24px);
 				box-sizing: border-box;
@@ -223,8 +232,6 @@
 				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
 			}
 		}
-
-
 	}
 }
 // tablet -------------------------------------------------------------------
