--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -80,22 +80,6 @@
 			position: relative;
 		}
 
-		textarea {
-			resize: none;
-			width: 100%;
-			height: 120px;
-			padding: 20px;
-			font: 14px/1.6 "Noto Sans KR";
-			color: #888;
-			border: 1px solid #aaa;
-			margin-bottom: 20px;
-
-			&:last-child {
-				border: 1px solid #fff;
-				background: #efefef;
-				padding: 15px;
-			}
-		}
 		h2 {
 			display: inline-block;
 			font: normal 16px/1 "Noto Sans KR";
@@ -144,6 +128,7 @@
 			width: 100%;
 			border-collapse: collapse;
 			margin-bottom: 20px;
+		
 			tr {
 				position: relative;
 
@@ -230,6 +215,17 @@
 				color: #fff;
 				background: #222;
 				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
+			}
+			textarea {
+				resize: none;
+				width: 100%;
+				height: 200px;
+				padding: 20px;
+				font: 14px/1.6 "Noto Sans KR";
+				color: #888;
+				border: 1px solid #aaa;
+				margin-bottom: 30px;
+				text-align: left;
 			}
 		}
 	}
