--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -10,6 +10,7 @@
 	height: 100%;
 	text-align: center;
 
+
 	.sub_visual {
 		background-color: #bbb;
 	}
@@ -25,6 +26,49 @@
 			border-bottom: 2px solid #222;
 			padding-bottom: 30px;
 			letter-spacing: 1.5px;
+		}
+		.map_header {
+
+			width: 100%;
+			padding: 0 50px;
+			margin-top: 40px;
+			position: relative;
+			display: flex;
+			justify-content: space-between;
+			flex-direction: row;
+
+			li {
+				width: 100%;
+				
+
+				span {
+					display: inline-block;
+					width: 150px;
+					height: 150px;
+					border: 2px solid #111;
+					box-sizing: border-box;
+					border-radius: 50%;
+					font: bold 18px/1 'Noto Sans KR';
+					color: #111;
+
+					img {
+						width: 50px;
+						height: 50px;
+						margin: 25px auto 10px;
+
+						display: block;
+					}
+				}
+				h3 {
+					font: bold 20px/1 'Noto Sans KR';
+					margin: 20px 0 20px 0;
+					color: #111;
+				}
+				p {
+					font: bold 14px/1 'Noto Sans KR';
+					color: #111;
+				}
+			}
 		}
 
 		#map {
