--- a/css/style.css
+++ b/css/style.css
@@ -416,25 +416,99 @@ fieldset {
 'Noto Sans KR'
 */
 .community .sub_visual {
-  background-image: url(../img/f3.jpg);
+  background: url(../img/came2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   /* background-attachment: fixed; */
-  opacity: 0.8; }
+  position: relative; }
+  .community .sub_visual > h1 {
+    text-align: center;
+    font: bold 30px/1 "Noto Sans KR";
+    letter-spacing: 1.5px;
+    color: #fff;
+    padding-top: 40px;
+    margin-bottom: 30px; }
+  .community .sub_visual .coummity_search {
+    display: inline-block;
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+    position: absolute;
+    left: -3%; }
+    .community .sub_visual .coummity_search label {
+      font: 500 20px/1.5 "Noto Sans KR";
+      color: #fff;
+      margin-right: 20px; }
+      .community .sub_visual .coummity_search label i {
+        font-size: 25px;
+        margin-right: 10px; }
+    .community .sub_visual .coummity_search input[type="text"] {
+      width: 600px;
+      height: 50px;
+      padding-left: 30px;
+      font: 17px/1 "Noto Sans KR";
+      letter-spacing: 1.5px;
+      position: relative; }
 .community .inner {
+  width: 1180px;
   /* pagination */ }
   .community .inner h1 {
-    font: bold 50px/1 'Spartan';
+    font: bold 40px/1 "arial";
+    color: #444; }
+  .community .inner .help {
+    width: 100%;
+    height: 100%;
+    position: relative; }
+    .community .inner .help::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #111;
+      position: absolute;
+      top: -30px; }
+    .community .inner .help::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #111;
+      position: absolute;
+      bottom: -210px; }
+    .community .inner .help article {
+      width: 280px;
+      height: 180px;
+      float: left;
+      padding: 20px;
+      border: 1px solid #111;
+      margin-right: 20px;
+      margin-bottom: 100px;
+      border-radius: 7px;
+      box-sizing: border-box;
+      transition: 0.5s; }
+      .community .inner .help article:hover {
+        background: #111; }
+        .community .inner .help article:hover p, .community .inner .help article:hover .num {
+          color: pink; }
+      .community .inner .help article:last-child {
+        margin-right: 0; }
+      .community .inner .help article .num {
+        text-align: left;
+        font: bold 30px/1 'Noto Sans KR';
+        color: #111;
+        margin-bottom: 25px; }
+      .community .inner .help article p {
+        text-align: center;
+        font: bold 17px/1.5 "Noto Sans KR";
+        color: #111;
+        transition: 0.5s; }
+  .community .inner h2 {
+    font: bold 50px/1 "Spartan";
     color: #444;
     letter-spacing: 2px;
     text-align: center;
-    margin-bottom: 30px;
-    position: relative; }
-  .community .inner::after {
-    content: "";
-    display: block;
-    clear: both; }
+    margin-bottom: 30px; }
   .community .inner .header1 {
     text-align: center;
     margin-bottom: 50px; }
@@ -447,8 +521,7 @@ fieldset {
       .community .inner .header1 span:last-child {
         margin-right: 0; }
   .community .inner .header2 {
-    margin: 0 13%;
-    margin-bottom: 40px; }
+    margin: 0 13% 40px; }
     .community .inner .header2::after {
       content: "";
       display: block;
@@ -465,14 +538,12 @@ fieldset {
         text-align: center;
         padding-bottom: 10px;
         padding: 10px;
-        box-sizing: border-box;
-        border-bottom: 2px solid transparent;
-        /* transition: all 0.5s; */ }
+        border-bottom: 2px solid transparent; }
+        .community .inner .header2 li a:hover {
+          border-bottom: 2px solid #333;
+          box-sizing: border-box; }
       .community .inner .header2 li:last-child {
         margin-right: 0; }
-      .community .inner .header2 li:hover {
-        border-bottom: 2px solid #333;
-        box-sizing: border-box; }
   .community .inner table {
     width: 100%;
     border-bottom: 2px solid #111;
