--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -8,25 +8,126 @@
 
 .community {
 	.sub_visual {
-		background-image: url(../img/f3.jpg);
+		background: url(../img/came2.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: center center;
 		/* background-attachment: fixed; */
-		opacity: 0.8;
+		position: relative;
+
+		>h1 {
+			text-align: center;
+			font: bold 30px/1 "Noto Sans KR";
+			letter-spacing: 1.5px;
+			color: #fff;
+			padding-top: 40px;
+			margin-bottom: 30px;
+		}
+		.coummity_search {
+			display: inline-block;
+			width: 100%;
+			margin-top: 20px;
+			text-align: center;
+			position: absolute;
+			left: -3%;
+
+			label {
+				font: 500 20px/1.5 "Noto Sans KR";
+				color: #fff;
+				margin-right: 20px;
+
+				i {
+					font-size: 25px;
+					margin-right: 10px;
+				}
+			}
+			input[type="text"] {
+				width: 600px;
+				height: 50px;
+				padding-left: 30px;
+				font: 17px/1 "Noto Sans KR";
+				letter-spacing: 1.5px;
+				position: relative;
+			}
+		}
 	}
 	.inner {
+
+		width: 1180px;
+
+
 		h1 {
-			font: bold 50px/1 'Spartan'; color: #444;
+			font: bold 40px/1 "arial";
+			color: #444;
+		}
+		.help {
+			width: 100%;
+			height: 100%;
+			position: relative;
+
+			&::before {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #111;
+				position: absolute;
+				top: -30px;
+				
+			}
+			&::after {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: #111;
+				position: absolute;
+				bottom: -210px;
+				
+			}
+		
+			article {
+				width: 280px;
+				height: 180px;
+				float: left;
+				padding: 20px;
+				border: 1px solid #111;
+				margin-right: 20px;
+				margin-bottom: 100px;
+				border-radius: 7px;
+				box-sizing: border-box;
+				transition: 0.5s;
+				
+				&:hover {
+					background: #111;
+					p, .num {
+						color: pink;
+					}
+				}
+				&:last-child {
+					margin-right: 0;
+					
+				}
+				.num {
+					text-align: left;
+					font: bold 30px/1 'Noto Sans KR';
+					color: #111; margin-bottom: 25px;
+				}
+				p {
+					text-align: center;
+					font: bold 17px/1.5 "Noto Sans KR";
+					color: #111; 
+					transition: 0.5s;
+				}
+			}
+		}
+		h2 {
+			
+			font: bold 50px/1 "Spartan";
+			color: #444;
 			letter-spacing: 2px;
 			text-align: center;
 			margin-bottom: 30px;
-			position: relative;
-		}
-		&::after {
-			content: "";
-			display: block;
-			clear: both;
 		}
 		.header1 {
 			text-align: center;
@@ -44,8 +145,7 @@
 			}
 		}
 		.header2 {
-			margin: 0 13%;
-			margin-bottom: 40px;
+			margin: 0 13% 40px;
 
 			&::after {
 				content: "";
@@ -59,24 +159,22 @@
 
 				a {
 					display: inline-block;
-					font: bold 16px/1'Noto Sans KR';
+					font: bold 16px/1 "Noto Sans KR";
 					color: #666;
 					margin: 0px 20px;
 					text-align: center;
 					padding-bottom: 10px;
 					padding: 10px;
-					box-sizing: border-box;
 					border-bottom: 2px solid transparent;
 
-					/* transition: all 0.5s; */
+					&:hover {
+						border-bottom: 2px solid #333;
+						box-sizing: border-box;
+					}
 				}
 
 				&:last-child {
 					margin-right: 0;
-				}
-				&:hover {
-					border-bottom: 2px solid #333;
-					box-sizing: border-box;
 				}
 			}
 		}
@@ -274,12 +372,12 @@
 							margin-left: 10px;
 							margin-right: 10px;
 						}
-                        a {
-                            font: 13px/1 "arial";
-                        }
-                        &:nth-of-type(2) {
-                            font: normal 12px/30px "arial";
-                        }
+						a {
+							font: 13px/1 "arial";
+						}
+						&:nth-of-type(2) {
+							font: normal 12px/30px "arial";
+						}
 					}
 				}
 			}
@@ -392,30 +490,30 @@
 					a {
 						margin: 0 1px;
 
-                        &:nth-of-type(1) {
-                            position: absolute;
-                            left: 20px;
-                            top: 3px;
-                        }
-                        &:nth-of-type(2) {
-                            display: none;
-                        }
-                        &:nth-of-type(3) {
-                            display: none;
-                        }
-                        &:nth-of-type(4) {
-                            display: none;
-                        }
-                        &:nth-of-type(5) {
-                            display: none;
-                        }
+						&:nth-of-type(1) {
+							position: absolute;
+							left: 20px;
+							top: 3px;
+						}
+						&:nth-of-type(2) {
+							display: none;
+						}
+						&:nth-of-type(3) {
+							display: none;
+						}
+						&:nth-of-type(4) {
+							display: none;
+						}
+						&:nth-of-type(5) {
+							display: none;
+						}
 					}
-                    .left1 {
-                        left: -2%;
-                    }
-                    .right1 {
-                        right: 77%;
-                    }
+					.left1 {
+						left: -2%;
+					}
+					.right1 {
+						right: 77%;
+					}
 				}
 				.next {
 					width: 100px;
