--- a/css/style.css
+++ b/css/style.css
@@ -505,8 +505,8 @@ fieldset {
         transition: 0.5s; }
   .community .inner h2 {
     font: bold 50px/1 "Spartan";
-    color: #444;
-    letter-spacing: 2px;
+    color: #333;
+    letter-spacing: 1.5px;
     text-align: center;
     margin-bottom: 30px; }
   .community .inner .header1 {
@@ -931,7 +931,8 @@ fieldset {
         box-sizing: border-box;
         color: #fff;
         background: #222; }
-      .join .inner .table2 textarea {
+      .join .inner .table2 .box1 {
+        display: block;
         resize: none;
         width: 100%;
         height: 200px;
@@ -940,7 +941,8 @@ fieldset {
         color: #888;
         border: 1px solid #aaa;
         margin-bottom: 30px;
-        text-align: left; }
+        text-align: left;
+        overflow: auto; }
 
 @media screen and (max-width: 1179px) {
   .join {
@@ -1298,14 +1300,15 @@ fieldset {
   .location .sub_visual {
     background-color: #bbb; }
   .location .inner h1 {
-    font: bold 50px/1 "Noto Sans KR";
-    margin-bottom: 30px;
-    letter-spacing: 1.5px; }
+    font: bold 50px/1 "Spartan";
+    margin-bottom: 40px;
+    letter-spacing: 1.5px;
+    color: #333; }
   .location .inner h2 {
     font: bold 35px/1 "Noto Sans KR";
     color: #222;
     border-bottom: 2px solid #222;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     letter-spacing: 1.5px; }
   .location .inner .map_header {
     width: 100%;
