--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -216,7 +216,8 @@
 				background: #222;
 				// background: linear-gradient(60deg, #d9a7c7, #fffcdc);
 			}
-			textarea {
+			.box1 {
+				display: block;
 				resize: none;
 				width: 100%;
 				height: 200px;
@@ -226,6 +227,7 @@
 				border: 1px solid #aaa;
 				margin-bottom: 30px;
 				text-align: left;
+				overflow: auto;
 			}
 		}
 	}
