--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -16,15 +16,17 @@
 	}
 	.inner {
 		h1 {
-			font: bold 50px/1 "Noto Sans KR";
-			margin-bottom: 30px;
+			font: bold 50px/1 "Spartan";
+			margin-bottom: 40px;
 			letter-spacing: 1.5px;
+			color: #333;
+			
 		}
 		h2 {
 			font: bold 35px/1 "Noto Sans KR";
 			color: #222;
 			border-bottom: 2px solid #222;
-			padding-bottom: 30px;
+			padding-bottom: 50px;
 			letter-spacing: 1.5px;
 		}
 		.map_header {
