--- a/css/style.css
+++ b/css/style.css
@@ -1221,39 +1221,86 @@ fieldset {
           .department .inner .wrap .team article:nth-of-type(4n+0) {
             margin-right: 0; }
 
-.gallery .sub_visual {
-  background-color: #ccc; }
-.gallery .inner {
-  padding: 0px 150px; }
-  .gallery .inner h1 {
-    text-align: center; }
-  .gallery .inner #gallery ul li {
-    display: inline;
-    float: left;
-    margin-right: 20px; }
-    .gallery .inner #gallery ul li:last-child {
-      margin-right: 0px; }
-  .gallery .inner .pop {
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 100px;
-    box-sizing: border-box; }
-    .gallery .inner .pop img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-    .gallery .inner .pop span {
-      font: bold 14px/1 "arial";
-      color: #fff;
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      cursor: pointer; }
+/*
+"Spartan"
+'STIX Two Text'
+'Noto Sans KR'
+*/
+body {
+  background: #eee; }
 
+.content .inner {
+  width: 100%;
+  padding: 100px; }
+  .content .inner #gallery {
+    width: 100%;
+    min-height: 500px;
+    position: relative; }
+    .content .inner #gallery .loading {
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      top: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: 0.5s; }
+      .content .inner #gallery .loading.off {
+        opacity: 0; }
+    .content .inner #gallery ul {
+      width: 100%;
+      transition: 0.5s;
+      transform: translateY(100px);
+      opacity: 0; }
+      .content .inner #gallery ul.on {
+        opacity: 1;
+        transform: translateY(0px); }
+      .content .inner #gallery ul::after {
+        content: "";
+        display: block;
+        clear: both; }
+      .content .inner #gallery ul li {
+        width: 25%;
+        float: left;
+        padding: 10px; }
+        .content .inner #gallery ul li > div {
+          width: 100%;
+          background: #fff;
+          padding: 10px;
+          box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1); }
+          .content .inner #gallery ul li > div .thumb {
+            width: 100%;
+            margin-bottom: 20px; }
+
+.pop {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 100px;
+  box-sizing: border-box; }
+  .pop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+  .pop span {
+    font: bold 14px/1 "arial";
+    color: #fff;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer; }
+
+@media screen and (max-width: 999px) {
+  .content .inner #gallery ul li {
+    width: 33.333%; } }
+@media screen and (max-width: 599px) {
+  .content .inner #gallery ul li {
+    width: 50%; } }
+@media screen and (max-width: 499px) {
+  .content .inner #gallery ul li {
+    width: 100%; } }
 /*
 "Spartan"
 'STIX Two Text'
