--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -94,7 +94,7 @@
 				border: 1px solid #111;
 				margin-right: 20px;
 				margin-bottom: 100px;
-				border-radius: 7px;
+				// border-radius: 7px;
 				box-sizing: border-box;
 				transition: 0.5s;
 
