갤러리 작업중

--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -2,7 +2,7 @@
 
 // header_sub -------------------------------------------------------
 #header_sub {
-	width: 100vw;
+	width: 100%;
 	background: #fff;
 	overflow: hidden;
 
