--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ fieldset {
   clear: both; }
 
 #header_sub {
-  width: 100vw;
+  width: 100%;
   background: #fff;
   overflow: hidden; }
   #header_sub .inner {
@@ -1227,27 +1227,56 @@ fieldset {
 */
 .gallery .inner {
   width: 100%;
-  padding: 100px; }
+  padding: 100px;
+  position: relative; }
   .gallery .inner h1 {
-    font: bold 50px/1 "Spartan";
-    text-align: center;
+    font: bold 50px/1.5 "Spartan";
+    text-align: left;
     color: #333;
     letter-spacing: 1.5px;
-    margin-bottom: 40px; }
+    margin-bottom: 150px; }
+  .gallery .inner .loading {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 0.5s; }
+    .gallery .inner .loading.off {
+      opacity: 0; }
+  .gallery .inner #searchBox {
+    display: inline-block;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%); }
+    .gallery .inner #searchBox input[type="text"] {
+      width: 400px;
+      height: 40px;
+      padding-left: 20px;
+      border: none;
+      font: bold 20px/1 "Spartan";
+      border-bottom: 3px solid #222; }
+    .gallery .inner #searchBox button {
+      display: none; }
+  .gallery .inner .typography {
+    display: inline-block;
+    text-align: right;
+    position: absolute;
+    right: 120px;
+    top: 50px; }
+    .gallery .inner .typography h2 {
+      font: bold 22px/1 'Spartan';
+      color: #222;
+      margin-bottom: 10px; }
+    .gallery .inner .typography p {
+      font: 18px/1.7 'Spartan';
+      color: #888; }
   .gallery .inner #gallery_page {
     width: 100%;
     min-height: 500px;
     position: relative; }
-    .gallery .inner #gallery_page .loading {
-      width: 100px;
-      height: 100px;
-      position: absolute;
-      top: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      transition: 0.5s; }
-      .gallery .inner #gallery_page .loading.off {
-        opacity: 0; }
     .gallery .inner #gallery_page ul {
       width: 100%;
       transition: 0.5s;
@@ -1261,20 +1290,34 @@ fieldset {
         display: block;
         clear: both; }
       .gallery .inner #gallery_page ul li {
-        width: 25%;
+        width: 50%;
         float: left;
         padding: 10px; }
         .gallery .inner #gallery_page ul li > div {
           width: 100%;
-          background: #fff;
-          padding: 10px;
-          box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1); }
-          .gallery .inner #gallery_page ul li > div .thumb {
-            width: 100%;
-            margin-bottom: 20px; }
-          .gallery .inner #gallery_page ul li > div .profile img {
-            width: 24px;
-            height: 24px; }
+          border: 1px solid #aaa;
+          padding: 20px;
+          position: relative; }
+          .gallery .inner #gallery_page ul li > div a {
+            display: block; }
+            .gallery .inner #gallery_page ul li > div a .thumb {
+              width: 300px;
+              height: 250px;
+              margin-bottom: 20px;
+              object-fit: cover; }
+          .gallery .inner #gallery_page ul li > div p {
+            font: bold 25px/1 "Spartan";
+            color: #222;
+            margin-bottom: 25px; }
+          .gallery .inner #gallery_page ul li > div span {
+            display: block;
+            width: 50%;
+            font: 15px/1.5 "Spartan";
+            color: #888; }
+          .gallery .inner #gallery_page ul li > div .arrow {
+            position: absolute;
+            right: 40px;
+            bottom: 55px; }
 
 .pop {
   width: 100%;
@@ -1315,26 +1358,42 @@ fieldset {
   width: 100%;
   text-align: center; }
   .youtube .inner h1 {
-    font: bold 30px/1 "Noto Sans KR"; }
+    font: bold 50px/1 "Spartan";
+    margin-bottom: 40px;
+    letter-spacing: 1.5px;
+    color: #333; }
   .youtube .inner #vidGallery {
     width: 100%;
     padding: 100px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap; }
+    .youtube .inner #vidGallery .first_youtube {
+      width: 100%;
+      height: 100%;
+      background: #999; }
     .youtube .inner #vidGallery article {
       width: 300px;
       height: 400px;
       border: 1px solid #ccc;
       padding: 30px;
       margin-bottom: 30px;
-      text-align: center; }
+      text-align: center;
+      background: #aaa;
+      position: relative; }
+      .youtube .inner #vidGallery article:nth-of-type(1) {
+        width: 50%;
+        height: 100%;
+        border: none;
+        margin-bottom: 40px; }
       .youtube .inner #vidGallery article a {
         width: 30%; }
         .youtube .inner #vidGallery article a img {
-          width: 200px; }
+          width: 100%; }
+          .youtube .inner #vidGallery article a img:first-child {
+            width: 100%; }
       .youtube .inner #vidGallery article .con {
-        width: 65%; }
+        width: 100%; }
         .youtube .inner #vidGallery article .con h2 {
           width: 100%;
           display: inline-block;
@@ -1455,7 +1514,7 @@ fieldset {
         color: pink; }
 
 #header {
-  width: 100vw;
+  width: 100%;
   background: #fff;
   overflow: hidden; }
   #header .inner {
