--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -4,88 +4,138 @@
 'Noto Sans KR'
 */
 
+.gallery .inner {
+	width: 100%;
+	padding: 100px;
+	position: relative;
 
-	.gallery .inner {
-		width: 100%;
-		padding: 100px;
-		
+	h1 {
+		font: bold 50px/1.5 "Spartan";
+		text-align: left;
+		color: #333;
+		letter-spacing: 1.5px;
+		margin-bottom: 150px;
+	}
 
-		h1 {
-			font: bold 50px/1 "Spartan";
-			text-align: center;
-			color: #333;
-			letter-spacing: 1.5px;
-			margin-bottom: 40px;
+	.loading {
+		width: 100px;
+		height: 100px;
+		position: absolute;
+		top: 300px;
+		left: 50%;
+		transform: translateX(-50%);
+		transition: 0.5s;
+
+		&.off {
+			opacity: 0;
 		}
+	}
+	#searchBox {
 
-		#gallery_page {
+		display: inline-block;
+		position: absolute;
+		top: 100px; 
+		left: 50%;
+		transform: translateX(-50%);
+
+		input[type="text"] {
+			width: 400px;
+			height: 40px;
+			padding-left: 20px;
+			border: none;
+			font: bold 20px/1 "Spartan";
+			border-bottom: 3px solid #222;
+		}
+		button {
+			display: none;
+		}
+	}
+	.typography {
+		display: inline-block;
+		text-align: right;
+		position: absolute;
+		right: 120px;
+		top: 50px;
+
+		h2 {
+			font: bold 22px/1 'Spartan';
+			color: #222;
+			margin-bottom: 10px;
+		}
+		p{
+			font: 18px/1.7 'Spartan';
+			 color: #888;
+		}
+	}
+	#gallery_page {
+		width: 100%;
+		min-height: 500px;
+		position: relative;
+
+		
+		ul {
 			width: 100%;
-			min-height: 500px;
-			position: relative;
+			transition: 0.5s;
+			transform: translateY(100px);
+			opacity: 0;
 
-			//로딩바 이미지모양처리
-			.loading {
-				width: 100px;
-				height: 100px;
-				position: absolute;
-				top: 100px;
-				left: 50%;
-				transform: translateX(-50%);
-				transition: 0.5s;
-
-				//off시 안보이게 처리
-				&.off {
-					opacity: 0;
-				}
+			
+			&.on {
+				opacity: 1;
+				transform: translateY(0px);
 			}
 
-			//디폴트로 이미지 목록 안보이게 처리
-			ul {
-				width: 100%;
-				transition: 0.5s;
-				transform: translateY(100px);
-				opacity: 0;
+			&::after {
+				content: "";
+				display: block;
+				clear: both;
+			}
 
-				//on이 붙으면 보이게 처리
-				&.on {
-					opacity: 1;
-					transform: translateY(0px);
-				}
+			li {
+				width: 50%;
+				float: left;
+				padding: 10px;
 
-				&::after {
-					content: "";
-					display: block;
-					clear: both;
-				}
+				> div {
+					width: 100%;
+					// background: #fff;
+					border: 1px solid #aaa;
+					padding: 20px;
+					position: relative;
+					// box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 
-				li {
-					width: 25%;
-					float: left;
-					padding: 10px;
-
-					> div {
-						width: 100%;
-						background: #fff;
-						padding: 10px;
-						box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+					a {
+						display: block;
 
 						.thumb {
-							width: 100%;
+							width: 300px;
+							height: 250px;
 							margin-bottom: 20px;
+							object-fit: cover;
 						}
-
-						.profile {
-							img {
-								width: 24px;
-								height: 24px;
-							}
-						}
+					}
+					p {
+						font: bold 25px/1 "Spartan";
+						color: #222;
+						margin-bottom: 25px;
+					}
+					span {
+						display: block;
+						width: 50%;
+						font: 15px/1.5 "Spartan";
+						color: #888;
+					}
+					.arrow {
+						// width: 100px;
+						position: absolute;
+						right: 40px;
+						bottom: 55px;
 					}
 				}
 			}
 		}
 	}
-
+}
 
 .pop {
 	width: 100%;
