--- a/scss/_youtube.scss
+++ b/scss/_youtube.scss
@@ -13,7 +13,10 @@
 	}
 	.inner {
 		h1 {
-			font: bold 30px/1 "Noto Sans KR";
+			font: bold 50px/1 "Spartan";
+			margin-bottom: 40px;
+			letter-spacing: 1.5px;
+			color: #333;
 		}
 		#vidGallery {
 			width: 100%;
@@ -22,6 +25,13 @@
 			justify-content: space-around;
 			flex-wrap: wrap;
 
+			.first_youtube {
+
+				width: 100%;
+				height: 100%;
+				background: #999;
+			}
+
 			article {
 				width: 300px;
 				height: 400px;
@@ -29,15 +39,29 @@
 				padding: 30px;
 				margin-bottom: 30px;
 				text-align: center;
+				background: #aaa;
+				position: relative;
+
+				&:nth-of-type(1) {
+					
+					width: 50%;
+					height: 100%;
+					border: none;
+					margin-bottom: 40px;
+				}
 
 				a {
 					width: 30%;
 					img {
-						width: 200px;
+						width: 100%;
+
+						&:first-child {
+							width: 100%;
+						}
 					}
 				}
 				.con {
-					width: 65%;
+					width: 100%;
 
 					h2 {
 						width: 100%;
