--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,9 +28,14 @@ $mobile: 539px;
 	margin-bottom: $mb;
 }
 
+// body{
+// 	width: 100%;
+// 	overflow-x: hidden;
+// }
+
 //  header ---------------------------------------------------------------
 #header {
-	width: 100vw;
+	width: 100%;
 	background: #fff;
 	overflow: hidden;
 
