--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -91,7 +91,8 @@
 				.main_pic {
 					width: 450px;
 					height: 100%;
-					background: rgb(188, 201, 233);
+					background: url(../img/members.jpg) no-repeat;
+					background-size: cover; background-position: center;
 					float: left;
 
 				
@@ -156,16 +157,78 @@
 					float: left;
 					position: relative;
 					
+					
 					.pic {
 						width: 120px;
 						height: 120px;
-						border: 5px solid #fff;
+						border: 5px solid pink;
 						border-radius: 50%;
-						background: rgba(214, 197, 213, 0.816);
+						background: rgba(153, 127, 127, 0.405);
 						margin: 30px auto 45px;
 						box-sizing: border-box;
-						box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.04);
+						box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
+
+					}
+					&:nth-of-type(1) .pic{
+						background-image: url("../img/mem01.jpg");
+						background-size: cover;
+						background-position: center;
 						
+					}
+					&:nth-of-type(2) .pic{
+						background-image: url("../img/mem02.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(3) .pic{
+						background-image: url("../img/mem03.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(4) .pic{
+						background-image: url("../img/mem04.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(5) .pic{
+						background-image: url("../img/mem05.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(6) .pic{
+						background-image: url("../img/mem06.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(7) .pic{
+						background-image: url("../img/mem07.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(8) .pic{
+						background-image: url("../img/mem08.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(9) .pic{
+						background-image: url("../img/mem09.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(10) .pic{
+						background-image: url("../img/mem10.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(11) .pic{
+						background-image: url("../img/mem11.jpg");
+						background-size: cover;
+						background-position: center;
+					}
+					&:nth-of-type(12) .pic{
+						background-image: url("../img/mem12.jpg");
+						background-size: cover;
+						background-position: center;
 					}
 					>h3 {
 						font: bold 17px/1 'Spartan';
@@ -184,6 +247,11 @@
 						text-align: center;
 						line-height: 40px;
 						color: rgb(133, 128, 128);
+						transition: 1s;
+
+						&:hover i {
+							color: #fff;
+						}
 					}
 					
 					
@@ -192,6 +260,7 @@
 					}
 				}
 			}
+
 		}
 	}
 }
